# trackhub-utils

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
data/: hub.yaml
phub/: get_bam2bigWig.py  get_bed2bigBed.py  get_bedGraph2bigWig.py  get_hub.py  utils.py
scripts/: copy_ucsc_exe  file.txt  header-mapping.txt  reheader_bam  set_bed_color
