[metadata]
name = pyhub
description = "Miscellaneous programs for format conversion and track hubs"
long-description = file: README.md
version = 0.0.0
url = https://github.com/eboileau/trackhub-utils
author = Etienne Boileau
maintainer = Etienne Boileau
maintainer-email = boileau@uni-heidelberg.de
license = MIT
keywords = bioinformatics, genome browser
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.0

[options]
packages = find:
# see requirements.txt for pinned versions
install_requires =
    pandas
    trackhub
    deepTool
python_requires = >=3.6,<3.7.0a0
test_suite =
    nose.collector
tests_require =
    nose
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    # pgrms
    get-all-predictions = pproc.pgrms.get_all_predictions:main


# config for test integration
# [nosetests]

# sphinx integration with setuptools
# [build_sphinx]
